src/objects/GCRCareHub__c.object
<CustomObject>
    <description>Care hub object for contact us v4</description>
    <fields>
        <fullName>AddressFieldSet__c</fullName>
        <description>Field to hold name of the field set to identify the sequence of address/first/last name fields</description>
        <label>Address Field Set</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCL__c</fullName>
        <description>Unique field to prevent carehub creation with existing Brand Country Language</description>
        <label>Brand Country Language</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BackgroundImgLanding__c</fullName>
        <description>Background image for landing page</description>
        <label>Landing Page Background Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BannerImageUrl__c</fullName>
        <description>Image url for care hub banner</description>
        <label>Banner Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BannerLink__c</fullName>
        <description>Anchor link for banner</description>
        <label>Banner Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BannerText__c</fullName>
        <description>Text translations for care hub banner</description>
        <label>Banner Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigData_Locale_Code__c</fullName>
        <formula>BrandCountryLanguage__r.Contact_Us_Language__r.BigData_Locale_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BigData Locale Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrandCountryLanguage__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Country for Brand Country Language</description>
        <label>Contact Us Brand Language</label>
        <referenceTo>Contact_Us_Brand_Language__c</referenceTo>
        <relationshipLabel>Care Hubs</relationshipLabel>
        <relationshipName>CareHubs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>BrandCountryLanguage__r.Contact_Us_Brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryIsoCode__c</fullName>
        <formula>BrandCountryLanguage__r.Contact_Us_Language__r.GCRCountryIsoCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Iso Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>TEXT(BrandCountryLanguage__r.Contact_Us_Language__r.Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <label>ExternalId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAQCountry__c</fullName>
        <formula>IF(ISPICKVAL(BrandCountryLanguage__r.Contact_Us_Language__r.Country__c, &apos;United States of America&apos;), &apos;United_States&apos;, SUBSTITUTE(TEXT(BrandCountryLanguage__r.Contact_Us_Language__r.Country__c), &apos; &apos;, &apos;_&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FAQ Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCRLabelNext__c</fullName>
        <label>Next Page Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCRLabelPrevious__c</fullName>
        <label>Previous Page Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LandingPageText__c</fullName>
        <defaultValue>&apos;How can we help?&apos;</defaultValue>
        <description>Landing text for GCR Widget</description>
        <label>Landing Page Text</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LanguageIsoCode__c</fullName>
        <formula>BrandCountryLanguage__r.Contact_Us_Language__r.GCRLanguageIsoCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Language Iso Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LanguageLocaleKey__c</fullName>
        <formula>BrandCountryLanguage__r.Contact_Us_Language__r.Language_Locale_Key__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Language Locale Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <formula>TEXT(BrandCountryLanguage__r.Contact_Us_Language__r.Language__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgWideEmail__c</fullName>
        <description>Field to contain Organization Wide Email address used as From address for the care hub</description>
        <label>Org Wide Email Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrivacyPolicyLabel__c</fullName>
        <label>Privacy Policy Label</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrivacyPolicyLink__c</fullName>
        <description>Contains link to privacy policy</description>
        <label>Privacy Policy Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Privacy_Policy_Label_2__c</fullName>
        <label>Privacy Policy Label 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SearchMinCharMsg__c</fullName>
        <label>Search Minimum Character Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidationErrorMessage__c</fullName>
        <label>Validation Error Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isLastNameFirst__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to determine if last name should be rendered first</description>
        <label>isLastNameFirst</label>
        <type>Checkbox</type>
    </fields>
    <label>Care Hub</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>PrivacyPolicyLabel__c</columns>
        <columns>Privacy_Policy_Label_2__c</columns>
        <columns>CountryIsoCode__c</columns>
        <columns>PrivacyPolicyLink__c</columns>
        <columns>FAQCountry__c</columns>
        <columns>Language__c</columns>
        <columns>LanguageIsoCode__c</columns>
        <columns>LanguageLocaleKey__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>China</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>PrivacyPolicyLabel__c</columns>
        <columns>Privacy_Policy_Label_2__c</columns>
        <columns>CountryIsoCode__c</columns>
        <columns>PrivacyPolicyLink__c</columns>
        <columns>FAQCountry__c</columns>
        <columns>Language__c</columns>
        <columns>LanguageIsoCode__c</columns>
        <columns>LanguageLocaleKey__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>contains</operation>
            <value>China</value>
        </filters>
        <label>China</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Brand__c</columns>
        <columns>Language__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Japan</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>PrivacyPolicyLabel__c</columns>
        <columns>Privacy_Policy_Label_2__c</columns>
        <columns>CountryIsoCode__c</columns>
        <columns>PrivacyPolicyLink__c</columns>
        <columns>FAQCountry__c</columns>
        <columns>Language__c</columns>
        <columns>LanguageIsoCode__c</columns>
        <columns>LanguageLocaleKey__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Indonesia</value>
        </filters>
        <label>Japan</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>USA</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>PrivacyPolicyLabel__c</columns>
        <columns>Privacy_Policy_Label_2__c</columns>
        <columns>CountryIsoCode__c</columns>
        <columns>PrivacyPolicyLink__c</columns>
        <columns>FAQCountry__c</columns>
        <columns>Language__c</columns>
        <columns>LanguageIsoCode__c</columns>
        <columns>LanguageLocaleKey__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>United States of AMerica</value>
        </filters>
        <label>USA</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SCH-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Care Hubs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>